--- a/index.html
+++ b/index.html
@@ -57,26 +57,26 @@
             <div class="row">
               <div class=" col  col-third text-center mt-32 s-col-full">
                 <p class="member-name">Harry style</p>
-                <img src="../assets/img/mv5bmtuxmzu2mtk1of5bml5banbnxkftztgwnzg4njawmziv1-1600418062637176578491 (1).webp" alt="band" class="avta">
+                <img src="./assets/img/mv5bmtuxmzu2mtk1of5bml5banbnxkftztgwnzg4njawmziv1-1600418062637176578491 (1).webp" alt="band" class="avta">
               </div>
               <div class=" col  col-third text-center mt-32 s-col-full">
                 <p class="member-name">Liam Payne</p>
-                <img src="../assets/img/Liam Payne.jpg" alt="band" class="avta">
+                <img src="./assets/img/Liam Payne.jpg" alt="band" class="avta">
               </div>
   
               <div class=" col  col-third text-center mt-32 s-col-full">
                 <p class="member-name">Louis Tomlinson</p>
-                <img src="../assets/img/Louis Tomlinson.jpg" alt="band" class="avta">
+                <img src="./assets/img/Louis Tomlinson.jpg" alt="band" class="avta">
               </div>
             </div>
             <div class="row">
               <div class=" col  col-half text-center mt-32 s-col-full">
                 <p class="member-name">Zayn Malik</p>
-                <img src="../assets/img/Zayn Malik.webp" alt="" class="avta">
+                <img src="./assets/img/Zayn Malik.webp" alt="" class="avta">
               </div>
               <div class=" col  col-half text-center mt-32 s-col-full" >
                 <p class="member-name">Niall Horan</p>
-                <img src="../assets/img/Niall Horan.webp" alt="" class="avta">
+                <img src="./assets/img/Niall Horan.webp" alt="" class="avta">
               </div>
             </div>
           </div>
@@ -93,7 +93,7 @@
               </ul>
               <div class=" row place-list">
                 <div class="col-third mt-16 col s-col-full">
-                    <img src="../assets/img/place1.jpg" alt="" class="place-img">
+                    <img src="./assets/img/place1.jpg" alt="" class="place-img">
                     <div class="place-body">
                         <h3 class="place-heading">New York</h3>
                         <p class="time">Fri 27 Nov 2016</p>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="col-third mt-16 col s-col-full">
-                  <img src="../assets/img/place2.jpg" alt=""class="place-img">
+                  <img src="./assets/img/place2.jpg" alt=""class="place-img">
                   <div class="place-body">
                       <h3 class="place-heading">Paris</h3>
                       <p class="time">Sat 28 Nov 2016</p>
@@ -111,7 +111,7 @@
                   </div>
               </div>
               <div class="col-third mt-16 col s-col-full">
-                <img src="../assets/img/place3.jpg" alt="" class="place-img">
+                <img src="./assets/img/place3.jpg" alt="" class="place-img">
                 <div class="place-body">
                     <h3 class="place-heading">San Francisco</h3>
                     <p class="time">Sun 29 Nov 2016</p>
@@ -158,7 +158,7 @@
 
         </div>
         <div class="map-section">
-          <img src="../assets/img/map.jpg" alt="Map">
+          <img src="./assets/img/map.jpg" alt="Map">
         </div>
     </div>
 
